# devtree

./: .gitattributes  .gitignore  CLAUDE.md  PROJECT.md  README.md  pyproject.toml  scraper.py  sync.sh
code/: analyze_pdfs.py  benchmark_extraction.py  build_graph.py  cluster_companies.py  count_pdf_pages.py  extract_predicates.py  extractor.py  merge_json.py  ocr_extract.py  ocr_pdf.py  persist_text.py  run_pipeline.py  scraper.py
code/pipeline/: __init__.py  aggregate.py  analyze.py  cleanup.py  db.py  download.py  extract.py  fetch.py  fix.py  graph.py  identify_interesting_devices.py  lib.py  migrate.py  ocr_pdf.py  pipeline.py  prefect_prototype.py  print_device.py  report.py  textify.py  textify_tesseract.py  verify.py
data/: predicates.json
docs/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  index.html  index.txt
docs/404/: index.html
docs/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt  index.html  index.txt
docs/ideas/: random_ideas.md  refactor.md  timeline-view.md  trade-name-predicate-matching.md  using-llms-to-extract-predicates.md
frontend/: .env.production  cytoscape-dagre.d.ts  next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Contact.tsx  DeviceExplorer.tsx  DeviceGraph.tsx  DevicePanel.tsx  ProcessOverview.tsx  Research.tsx  SearchBar.tsx  TabNavigation.tsx  TabsContent.tsx
frontend/lib/: graph-utils.ts
(+20 files in other folders)
