[project]
name = "devtree"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx",
    "pandas",
    "pillow",
    "prefect>=3.6.10",
    "pydantic",
    "pymupdf>=1.26.7",
    "pytesseract",
    "rapidfuzz>=3.14.3",
    "requests>=2.32.5",
    "tqdm",
]
